# cliff

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Full_System_Chart.drawio  Makefile  README.md  TOOLS.md  cliff  cmake_install.cmake  featureFlow.drawio  main.c  main.cliff
source/: Assembler.c  Assembler.h  CodeGen.c  CodeGen.h  FunctionDef.c  FunctionDef.h  KeywordTypes.c  KeywordTypes.h  LCConst.c  LCConst.h  Lexer.c  Lexer.h  LoadBuiltin.c  LoadBuiltin.h  ObjectFile.c  ObjectFile.h  ParseTree.c  ParseTree.h  Parser.c  Parser.h  Postfix.c  Postfix.h  StringList.c  StringList.h  SymbolTable.c  SymbolTable.h  TokenType.h  VariableHeap.c  VariableHeap.h  Visitor.c  Visitor.h  debug.c  debug.h  interface.c  interface.h  main.c
src/: debug.c  debug.h  main.c
src/lexer/: keyword.c  keyword.h  lexer.c  lexer.h  token.c  token.h  token_type.h
src/parser/: declaration.c  declaration.h  expression.c  expression.h  parse_tree.c  parse_tree.h  parser.c  parser.h  statement.c  statement.h
src/tool/: string_builder.c  string_builder.h  visitor.c  visitor.h
test/: examplemain.s  main.c  main.s  main.txt
